fix following marco feedback